<resources>
    <string name="app_name">21habit</string>
    <string name="Date">yyyy年MM月dd日</string>
    <string name="NoPlan">无计划</string>
    <string name="Number">第</string>
    <string name="Day">天</string>
    <string name="PermissionError">必须通过所有权限才能使用本程序!</string>
    <string name="Name">名称：</string>
    <string name="OriTime">起始时间：</string>
    <string name="ContainToday">包含今天</string>
    <string name="StartTomorrow">从明天开始</string>
    <string name="YouHavePersist">你已经坚持到第</string>
    <string name="Confirm">确定</string>
    <string name="ConfirmHabitDone">你昨天保持习惯了吗？</string>
    <string name="Calendar">历史</string>
    <string name="Back">返回</string>
    <string name="Cancel">取消</string>
    <string name="Yes">打破了</string>
    <string name="No">没有</string>
    <string name="Warning">警告</string>
    <string name="Warning_sign_up">请确认你的注册信息</string>
    <string name="Notification">通知</string>
    <string name="ScreenBootReceiver">21habit已启动</string>
    <string name="Q1">你打破了习惯吗？</string>
    <string name="Q2">请选择删除方式？</string>
    <string name="Q3">你想下载最新版本吗？</string>
    <string name="Q4"></string>
    <string name="DeleteHabit">删除习惯</string>
    <string name="BrokeHabit">打破习惯</string>
    <string name="Time">HH:mm:ss</string>
    <string name="LevelOne">“刻意，不自然”，需要十分刻意地提醒自己。你会觉得有些不自然，不舒服，你应该调动意志力，克服这些情况。</string>
    <string name="LevelTwo">“刻意，自然”，你已经觉得比较自然，比较舒服了，但是一不留意，你还会恢复到以前，因此，你还需要刻意地提醒自己改变。</string>
    <string name="LevelThree">“不刻意，自然”，其实这就是习惯，这一阶段被称为“习惯性的稳定期”。一旦跨入这个阶段，你就已经完成了自我改造，这个习惯已成为你生命中的一个有机的组成部分，它会自然而然地不停为你“效劳”。</string>
    <string name="title_activity_login">登陆</string>
    <!-- Strings related to login -->
    <string name="prompt_email">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登陆</string>
    <string name="action_sign_in_short">登陆</string>
    <string name="action_sign_up">注册</string>
    <string name="action_sign_up_short">注册</string>
    <string name="error_invalid_email">此用户名太短了</string>
    <string name="error_invalid_password">此密码太短了</string>
    <string name="error_incorrect_password">此密码不合规</string>
    <string name="error_field_required">此栏目必须填写</string>
    <string name="error_field_required_1">用户名或密码错误</string>
    <string name="error_field_required_2">该用户名已被注册</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login2">注册</string>
    <string name="trans_sign_in_page">没有账号密码，需要注册。</string>
</resources>
