<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/boder"
    android:gravity="center">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/boder">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Name"
            android:textSize="18sp"/>
        <EditText
            android:id="@+id/add_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/OriTime"
            android:textSize="18sp"/>
        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left">
            <RadioButton
                android:id="@+id/containtoday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ContainToday"
                android:checked="true"
                android:textSize="18sp"/>
            <RadioButton
                android:id="@+id/startomorrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/StartTomorrow"
                android:textSize="18sp" />
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_margin="10dp"
        android:paddingBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="45dp"
            android:text="@string/Cancel"
            android:textSize="18sp"
            android:background="@drawable/boder" />

        <Button
            android:id="@+id/confirm"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="45dp"
            android:text="@string/Confirm"
            android:textSize="18sp"
            android:background="@drawable/boder" />
    </LinearLayout>

    </LinearLayout>
</LinearLayout>
