<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:background="@drawable/boder">
<LinearLayout
    android:id="@+id/linear_days"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/boder"
    android:visibility="gone">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Number"
        android:textSize="20dp" />
    <TextView
        android:id="@+id/lastdays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/Red"
        android:text="20"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="32dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Day"
        android:textSize="20dp"/>
</LinearLayout>
<TextView
    android:id="@+id/description"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/boder"
    android:text="@string/LevelOne"
    android:gravity="center"
    android:textSize="24dp"
    android:visibility="gone"/>
        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/boder"
            android:text="@string/NoPlan"
            android:gravity="center"
            android:textSize="48dp"
            android:textStyle="bold"
            android:textColor="@color/Red" />
    </LinearLayout>

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/ic_delete_black_24dp"
        android:visibility="gone"/>

</RelativeLayout>